--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI for Flask App
+name: Flask CI
 
 on:
   push:
@@ -21,8 +21,11 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip list  # Debugging step to list installed packages
 
       - name: Run tests
         run: |
-          pytest tests/
+          pytest --version  # Check if pytest is installed
+          pytest  # Run the tests
