--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip list  # Debugging step to list installed packages
 
       - name: Run tests
         run: |
-          pytest --version  # Check if pytest is installed
-          pytest  # Run the tests
+          echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+          pytest
